# PowerTrader-AI-Binance-Version

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  EXCHANGE_DOCUMENTATION.md  IMPORT_FIXES.md  Install_Dependencies.bat  LEARNINGS.md  LICENSE  PHASE1_PHASE2_IMPLEMENTATION_REPORT.md  PHASE3_IMPLEMENTATION_REPORT.md  PowerTrader.bat  QUICK_REFERENCE.md  QUICK_START.md  README.md  Run_Thinker.bat  Run_Trader.bat  TODO.md  Train_All.bat  install_dependencies.py  llm_research_engine.py  llm_research_gui.py  market_data.db  order_management.db  order_management.db-shm  order_management.db-wal  order_management.db.backup_20260223_190850  package-lock.json  plan.md  portfolio_optimization.db  pt_hub.py  pt_thinker.py  pt_trader.py  pt_trainer.py  pyproject.toml  reorganize_repo.py  requirements-dev.txt  requirements.txt  start_powertrader.bat  test_core.py  trainer_status.json
.github/: DEVELOPMENT_WORKFLOW.md  PROJECT_SETUP.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  development-task.md  feature-request.md  security-issue.md
.github/workflows/: ci-cd.yml  ci.yml  code-quality.yml  code-release.yml  project-management.yml
app/: BACKTESTING_GUIDE.md  advanced_order_automation.py  advanced_order_gui.py  advanced_risk_management.py  advanced_stop_loss.py  advanced_take_profit.py  alerts_version.txt  backtesting_engine.py  backtesting_gui.py  btc_training_results.json  compliance_audit_system.py  conditional_order_logic.py  data_provider_config.json  dca_automation.py  demo_paper_trading.py  demo_phase3.py  demo_phase3_features.py  dependency_checker.py  eth_training_results.json  exchange_config_gui.py  exchange_setup.py  install_optional_deps.py  institutional_trading.db  institutional_trading.py  institutional_trading_gui.py  llm_research_engine.py  llm_research_gui.py  long_term_holdings.py  long_term_holdings_gui.py  market_data.db  memories_12hour.txt  memories_1day.txt  memories_1hour.txt  memories_1week.txt  memories_2hour.txt  memories_4hour.txt  memories_8hour.txt  migrations.py  order_analytics_dashboard.py  order_execution_engine.py  (+83 more)
app/BNB/: bnb_training_results.json  pt_trainer.py  pt_trainer_standalone.py
app/BTC/: pt_trainer.py
app/DOGE/: doge_training_results.json
app/ETH/: eth_training_results.json  pt_trainer.py
app/XRP/: pt_trainer.py  pt_trainer_standalone.py  xrp_training_results.json
app/config/: alert_thresholds.json  integration_test.json  monitoring.json  production.ini
docs/: INSTALLATION.md  README.md
docs/development/: ARTIFACT_REPOSITORIES.md
docs/features/: ADVANCED_FEATURES_GUIDE.md  ATTRIBUTION_GUIDE.md  ORDER_MANAGEMENT_DESIGN.md
docs/getting-started/: README.md  installation.md
docs/reference/: CONTRIBUTORS.md  QUICK_REFERENCE.md
docs/technical/: ARCHITECTURE.md
legacy/: README.md  README.txt  pt_thinker.py  pt_trainer.py
scripts/: README.md  compare_outputs.py  create_github_issues.py  migrate.py  run_hub.py  run_thinker.py  run_trader.py  run_trainer.py  switch_backend.py
tests/: conftest.py
(+85 files in other folders)
