[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powertrader"
version = "0.1.0"
description = "Automated crypto trading bot with kNN-style price prediction and tiered DCA"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "requests",
    "psutil",
    "matplotlib",
    "colorama",
    "python-binance",
    "kucoin-python",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff  (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["powertrader"]

# ---------------------------------------------------------------------------
# Mypy  (type checking — incremental strict adoption)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
extra_checks = true
# Start strict on new code; legacy scripts are excluded
exclude = [
    "^legacy/",
    "^pt_hub\\.py$",
    "^pt_trainer\\.py$",
    "^pt_thinker\\.py$",
    "^pt_trader\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "binance.*",
    "kucoin.*",
    "colorama.*",
    "keyring.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["powertrader"]
omit = ["*/legacy/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0
